@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/abcmidi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/abcmidi/ChangeLog,v 1.6 2012/01/25 10:31:02 radhermit Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/abcmidi/ChangeLog,v 1.7 2012/01/25 10:31:47 radhermit Exp $
+
+  25 Jan 2012; Tim Harder <radhermit@gentoo.org> -abcmidi-2011.10.19.ebuild,
+  -abcmidi-2011.11.18.ebuild, -abcmidi-2011.12.08.ebuild:
+  Remove old.
 
 *abcmidi-2011.12.19 (25 Jan 2012)
 
